--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,16 @@
-.App {
-  text-align: center;
+body {
+  text-align: left;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  background-color: black;
+  color: #eee;
+  font-size: 2.2rem;
+  text-align: center;
+  font-weight: 500;
+  padding: 5px 10px;
+  box-sizing: border-box;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post {
+  margin-left: 1rem;
 }
