changed functionality of components

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-body {
-  text-align: left;
-}
-.App-header {
-  width: 100%;
-  background-color: black;
-  color: #eee;
-  font-size: 2.2rem;
-  text-align: center;
-  font-weight: 500;
-  padding: 5px 10px;
-  box-sizing: border-box;
-}
-.post {
-  margin-left: 1rem;
+.form-control {
+  width: 70%;
 }
